--- a/demo-cluster/.k8s-gen/user-manifests.yaml
+++ b/demo-cluster/.k8s-gen/user-manifests.yaml
@@ -28,6 +28,7 @@ spec:
     requests.memory: "1Gi" 
     limits.cpu: "1"  
     limits.memory: "1Gi" 
+    pods: "2"   
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
