--- a/demo-resources/gitops-agent-old.yaml
+++ b/demo-resources/gitops-agent-old.yaml
@@ -1,7 +1,7 @@
 apiVersion: kagent.dev/v1alpha2
 kind: Agent
 metadata:
-  name: gitops-agent
+  name: gitops-agent-old
   namespace: kagent
 spec:
   type: Declarative
