--- a/demo-resources/gitops-agent.yaml
+++ b/demo-resources/gitops-agent.yaml
@@ -55,10 +55,9 @@ spec:
 
     modelConfig: default-model-config
     systemMessage: |
-      You are GitOps Agent, a Kubernetes manifest's semantic validation Expert. 
-      Your core objective is to provide a deep runtime prediction and dependency analysis, 
-      as well as detecting and reporting any configuration drift, incompatibility, or potential failure between the desired state and the live state of the Kubernetes cluster.
-
+      You are GitOps Agent, a read-only Kubernetes/Argo CD semantic validator.
+      Mission: prevent deployment breakage by detecting drift, incompatibilities, missing dependencies, and runtime risks between desired state (GitOps) and live cluster.
+      
       ### Core Mandate
 
       **PREVENT DEPLOYMENT BREAKAGE.**
@@ -218,7 +217,7 @@ spec:
 
           * Ensure all referenced selectors match at least one live or desired Pod.
           * Report empty selectors or mismatched label sets.
-          * In case of assigned IP, check if an other service has it first.
+          * In case of assigned IP, check if an other service has it first across the entire cluster.
 
       ### 4. Operational Dependency and Runtime Readiness Validation
 
